1.主页显示 默认的加菲狗图标,2.全景报警图片的模式

--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/y67"
             android:background="@color/color_white"
+            android:visibility="gone"
             hunt:leftDrawable="@drawable/home_icon_rs_online"
             hunt:rightDrawable="@drawable/icon_mine_arrow_next"
             hunt:text="@string/RuiShi_Name"
@@ -64,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/y67"
             android:background="@color/color_white"
+            android:visibility="gone"
             hunt:leftDrawable="@drawable/home_icon_720camera_online"
             hunt:rightDrawable="@drawable/icon_mine_arrow_next"
             hunt:text="720°摄像机"
