--- a/app/src/main/res/layout/layout_panorama_album_item_image.xml
+++ b/app/src/main/res/layout/layout_panorama_album_item_image.xml
@@ -83,24 +83,44 @@
         android:textStyle="bold" />
 
 
-    <ImageView
-        android:id="@+id/iv_album_icon_720_iphone"
+    <TextView
+        android:id="@+id/iv_album_video_duration_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/img_album_content"
+        android:layout_alignStart="@+id/img_album_content"
         android:layout_marginBottom="@dimen/y9"
-        android:layout_marginEnd="@dimen/y11"
-        android:layout_toStartOf="@+id/iv_album_icon_720_camera"
-        android:src="@drawable/album_icon_iphone" />
+        android:layout_marginStart="@dimen/y5"
+        android:text="00:08"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/sp11"
+        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/iv_album_icon_720_camera"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/img_album_content"
         android:layout_alignEnd="@+id/img_album_content"
-        android:layout_marginBottom="@dimen/y9"
-        android:layout_marginEnd="@dimen/y6"
-        android:src="@drawable/album_icon_720camera" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_album_icon_720_iphone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/y9"
+            android:layout_marginEnd="@dimen/y11"
+            android:src="@drawable/album_icon_iphone" />
+
+        <ImageView
+            android:id="@+id/iv_album_icon_720_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/y9"
+            android:layout_marginEnd="@dimen/y6"
+            android:src="@drawable/album_icon_720camera" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
