--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -473,4 +473,8 @@
         <item name="android:windowEnterAnimation">@anim/share_dialog_in</item>
         <item name="android:windowExitAnimation">@anim/slide_down_out</item>
     </style>
+
+    <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
+        <item name="colorAccent">@color/color_4b9fd5</item>
+    </style>
 </resources>
