--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -23,11 +23,11 @@
             hunt:dashLineColor="@color/color_e8e8e8"
             hunt:dashLineWidth="@dimen/x2"
             hunt:innerCircleColor="@color/color_white"
-            hunt:innerCircleRadius="@dimen/x6"
+            hunt:innerCircleRadius="@dimen/x3"
             hunt:outerCircleColor="@color/color_e8e8e8"
-            hunt:outerCircleRadius="@dimen/x10"
+            hunt:outerCircleRadius="@dimen/x5"
             hunt:outerCircleStrokeWidth="@dimen/x4"
-            hunt:outerCircleY="@dimen/y10" />
+            hunt:outerCircleY="@dimen/y13" />
 
         <RadioButton
             android:id="@+id/rbtn_item_check"
@@ -62,6 +62,7 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/fLayout_cam_message_item_bottom"
             android:layout_below="@+id/tv_cam_message_item_date"
+            android:layout_marginTop="3dp"
             android:orientation="horizontal">
 
             <ImageView
