--- a/app/src/main/res/layout/activity_panorama_album.xml
+++ b/app/src/main/res/layout/activity_panorama_album.xml
@@ -13,45 +13,43 @@
         android:layout_height="wrap_content"
         android:background="@color/color_0ba8cf">
 
-        <ImageView
-            android:id="@+id/act_panorama_album_back"
-            android:layout_width="@dimen/y48"
-            android:layout_height="@dimen/y48"
-            android:paddingEnd="@dimen/y17"
-            android:paddingStart="@dimen/y15"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/act_panorama_album_toolbar_header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:layout_toEndOf="@id/act_panorama_album_back"
-            android:drawablePadding="@dimen/x5"
-            android:drawableRight="@drawable/album_icon_open"
-            android:gravity="center_vertical"
-            android:padding="0dp"
-            android:text="相册+手机相册"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
 
-        <FrameLayout
-            android:id="@+id/act_panorama_album_toolbar_option_container"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/y11">
+            <ImageView
+                android:id="@+id/act_panorama_album_back"
+                android:layout_width="@dimen/y48"
+                android:layout_height="@dimen/y48"
+                android:paddingEnd="@dimen/y17"
+                android:paddingStart="@dimen/y15"
+                android:src="@drawable/nav_tab_back_selector" />
+
+            <TextView
+                android:id="@+id/act_panorama_album_toolbar_header_title"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:layout_toEndOf="@id/act_panorama_album_back"
+                android:drawablePadding="@dimen/x5"
+                android:drawableRight="@drawable/album_icon_open"
+                android:gravity="center_vertical"
+                android:padding="0dp"
+                android:text="相册+手机相册"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp18" />
 
             <TextView
                 android:id="@+id/tv_album_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:drawableStart="@drawable/album_delete_selector"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/y11"
+                android:background="@drawable/album_delete_selector"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
-
-        </FrameLayout>
-
+        </RelativeLayout>
     </RelativeLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
