--- a/app/src/main/res/layout/activity_panorama_album.xml
+++ b/app/src/main/res/layout/activity_panorama_album.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,7 +55,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/act_panorama_album_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/act_panorama_album_toolbar_container">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -73,5 +74,40 @@
         </FrameLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <FrameLayout
+        android:id="@+id/act_panorama_album_bottom_menu_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y48"
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_f6f9fa"
+        android:visibility="invisible">
 
-</LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:background="@color/color_d2d2d2" />
+
+        <TextView
+            android:id="@+id/tv_msg_full_select"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/x28"
+            android:paddingStart="@dimen/x28"
+            android:text="@string/SELECT_ALL"
+            android:textColor="@color/color_4b9fd5" />
+
+        <TextView
+            android:id="@+id/tv_msg_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:enabled="false"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/x28"
+            android:paddingStart="@dimen/x28"
+            android:text="@string/DELETE"
+            android:textColor="@color/common_btn_color_state" />
+    </FrameLayout>
+
+</RelativeLayout>
