--- a/app/src/main/res/layout/layout_panorama_connection_way.xml
+++ b/app/src/main/res/layout/layout_panorama_connection_way.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#99000000">
+    android:layout_width="@dimen/y280"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@android:color/transparent">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/layout_panorama_connection_way_content"
         android:layout_width="@dimen/y280"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_height="@dimen/y363"
+        android:background="#FFFFFF"
+        app:cardCornerRadius="@dimen/y9">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/layout_panorama_connection_way_content"
-            android:layout_width="@dimen/y280"
-            android:layout_height="@dimen/y363"
-            android:background="#FFFFFF"
-            app:cardCornerRadius="@dimen/y9">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
 
             <RelativeLayout
+                android:id="@+id/dialog_connection_way_family_hand"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_above="@+id/layout_panorama_connection_way_divider">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -39,25 +42,35 @@
                     android:src="@drawable/pic_home_model" />
 
                 <TextView
+                    android:id="@+id/dialog_connection_way_family"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/pic_home_model"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y25"
-                    android:text="摄像机通过网络与客户端连接>>"
+                    android:autoLink="all"
+                    android:text="@string/connection_way_family"
                     android:textColor="#666666"
                     android:textSize="@dimen/sp14" />
 
-                <View
-                    android:id="@+id/layout_panorama_connection_way_divider"
-                    android:layout_width="@dimen/y254"
-                    android:layout_height="@dimen/y1"
-                    android:layout_centerInParent="true" />
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/layout_panorama_connection_way_divider"
+                android:layout_width="@dimen/y254"
+                android:layout_height="@dimen/y1"
+                android:layout_centerInParent="true"
+                android:background="#e1e1e1" />
+
+            <RelativeLayout
+                android:id="@+id/dialog_connection_way_out_door_hand"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/layout_panorama_connection_way_divider">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/layout_panorama_connection_way_divider"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y23"
                     android:text="户外模式"
@@ -68,32 +81,34 @@
                     android:id="@+id/pic_ap_model"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/layout_panorama_connection_way_divider"
+
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y66"
                     android:src="@drawable/pic_ap_model" />
 
                 <TextView
+                    android:id="@+id/dialog_connection_way_out_door"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/pic_ap_model"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y21"
-                    android:text="摄像机直接与客户端连接>>"
+                    android:autoLink="all"
+                    android:text="@string/connection_way_out_door"
                     android:textColor="#666666"
                     android:textSize="@dimen/sp14" />
-
             </RelativeLayout>
+        </RelativeLayout>
 
 
-        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 
-        <ImageView
-            android:layout_width="@dimen/y42"
-            android:layout_height="@dimen/y42"
-            android:layout_below="@id/layout_panorama_connection_way_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/y36"
-            android:src="@drawable/pop_close" />
-    </RelativeLayout>
-</FrameLayout>
+    <ImageView
+        android:id="@+id/dialog_connection_close"
+        android:layout_width="@dimen/y42"
+        android:layout_height="@dimen/y42"
+        android:layout_below="@id/layout_panorama_connection_way_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/y36"
+        android:src="@drawable/pop_close" />
+</RelativeLayout>
