--- a/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
@@ -1,38 +1,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_marginTop="@dimen/y50"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/color_7c7c7c"
-        android:textSize="@dimen/sp15"
-        android:text="@string/Tap0_AlreadyEmailed"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/y50"
+        android:text="@string/Tap0_AlreadyEmailed"
+        android:textColor="@color/color_7c7c7c"
+        android:textSize="@dimen/sp15" />
 
     <TextView
-        android:layout_marginTop="@dimen/y18"
         android:id="@+id/tv_send_email_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/y18"
         android:gravity="center"
         android:lineSpacingExtra="@dimen/x10"
         android:textColor="@color/color_7c7c7c"
         android:textSize="@dimen/sp15" />
 
     <TextView
-        android:layout_marginTop="@dimen/y18"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/color_7c7c7c"
-        android:textSize="@dimen/sp15"
-        android:text="@string/Tap0_Click_ResetPassword"
+        android:id="@+id/tv_send_email_info"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/y18"
+        android:text="@string/Tap0_Click_ResetPassword"
+        android:textColor="@color/color_7c7c7c"
+        android:textSize="@dimen/sp15" />
 
     <TextView
         android:id="@+id/tv_email_confirm"
