--- a/app/src/main/res/layout/activity_cam_media.xml
+++ b/app/src/main/res/layout/activity_cam_media.xml
@@ -5,17 +5,20 @@
     android:id="@+id/activity_cam_media"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="com.cylan.jiafeigou.n.view.media.CamMediaActivity">
 
 
     <com.cylan.jiafeigou.misc.HackyViewPager
         android:id="@+id/vp_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/v_layout"
+        android:layout_below="@+id/custom_toolbar" />
 
     <com.cylan.jiafeigou.widget.CustomToolbar
-        layout="@layout/layout_default_custom_tool_bar"
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_enable_shadow="false"
@@ -24,78 +27,87 @@
         hunt:ct_title_color="@color/color_white" />
 
     <LinearLayout
-        android:id="@+id/lLayout_preview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fLayout_cam_handle_bar"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
-        android:visibility="gone">
-
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginLeft="7.5dp"
-            android:layout_marginRight="7.5dp"
-            android:minHeight="56dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_load_failed"
-            hunt:riv_corner_radius="5dp" />
-
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginLeft="7.5dp"
-            android:layout_marginRight="7.5dp"
-            android:minHeight="56dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_load_failed"
-            hunt:riv_corner_radius="5dp" />
-
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginLeft="7.5dp"
-            android:layout_marginRight="7.5dp"
-            android:minHeight="56dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_load_failed"
-            hunt:riv_corner_radius="5dp" />
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/fLayout_cam_handle_bar"
+        android:id="@+id/v_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgV_big_pic_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/x25"
-            android:padding="@dimen/x15"
-            android:src="@drawable/icon_download" />
-
-        <ImageView
-            android:id="@+id/imgV_big_pic_share"
+        <LinearLayout
+            android:id="@+id/lLayout_preview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/x25"
-            android:padding="@dimen/x15"
-            android:src="@drawable/icon_share" />
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/imgV_big_pic_collect"
-            android:layout_width="wrap_content"
+            <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginLeft="7.5dp"
+                android:layout_marginRight="7.5dp"
+                android:minHeight="56dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_load_failed"
+                hunt:riv_border_color="@color/color_4b9fd5"
+                hunt:riv_border_width="1dp"
+                hunt:riv_corner_radius="5dp" />
+
+            <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginLeft="7.5dp"
+                android:layout_marginRight="7.5dp"
+                android:minHeight="56dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_load_failed"
+                hunt:riv_border_color="@color/color_4b9fd5"
+                hunt:riv_border_width="1dp"
+                hunt:riv_corner_radius="5dp" />
+
+            <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginLeft="7.5dp"
+                android:layout_marginRight="7.5dp"
+                android:minHeight="56dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_load_failed"
+                hunt:riv_border_color="@color/color_4b9fd5"
+                hunt:riv_border_width="1dp"
+                hunt:riv_corner_radius="5dp" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/fLayout_cam_handle_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="@dimen/x25"
-            android:padding="@dimen/x15"
-            android:src="@drawable/icon_collection" />
-    </FrameLayout>
+            android:layout_gravity="bottom">
+
+            <ImageView
+                android:id="@+id/imgV_big_pic_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/x15"
+                android:src="@drawable/icon_download" />
+
+            <ImageView
+                android:id="@+id/imgV_big_pic_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/x15"
+                android:src="@drawable/icon_share" />
+
+            <ImageView
+                android:id="@+id/imgV_big_pic_collect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="@dimen/x15"
+                android:src="@drawable/icon_collection" />
+        </FrameLayout>
+    </LinearLayout>
+
 </RelativeLayout>
