--- a/app/src/main/res/layout/layout_panorama_album_item_image.xml
+++ b/app/src/main/res/layout/layout_panorama_album_item_image.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/y16"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/img_album_content"
+        android:layout_alignParentTop="true"
         app:dv_color="@color/color_e8e8e8"
         app:dv_dashGap="@dimen/y2"
         app:dv_dashLength="@dimen/y3"
@@ -63,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_cam_message_item_date"
         android:layout_marginStart="@dimen/y4"
-        android:layout_toEndOf="@id/dv_time_line"
+        android:layout_toEndOf="@+id/dv_time_line"
         android:paddingBottom="@dimen/y4"
         android:scaleType="fitXY"
         android:src="@drawable/wonderful_pic_place_holder"
