--- a/app/src/main/res/layout/activity_panorama_detail.xml
+++ b/app/src/main/res/layout/activity_panorama_detail.xml
@@ -192,7 +192,9 @@
         android:background="#99000000"
         android:clickable="true"
         android:focusable="true"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
 
