--- a/app/src/main/res/layout/layout_dialog_share_wonderful.xml
+++ b/app/src/main/res/layout/layout_dialog_share_wonderful.xml
@@ -18,6 +18,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/icon_friend"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
@@ -30,6 +31,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/icon_wechat"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
@@ -42,11 +44,12 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/share_icon_qq"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
             android:text="QQ"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_share_to_tencent_qzone"
@@ -55,6 +58,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/share_icon_qqspace"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
@@ -68,6 +72,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/share_icon_weibo"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
@@ -81,6 +86,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/y20"
             android:drawableStart="@drawable/twitter_icon_twitter"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
             android:paddingStart="@dimen/y20"
@@ -93,6 +99,7 @@
             android:clickable="true"
             android:drawablePadding="@dimen/x20"
             android:drawableStart="@drawable/share_icon_facebook"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/x20"
             android:paddingStart="@dimen/x20"
