增加广告页

--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -11,13 +11,13 @@
         <FrameLayout
             android:id="@+id/fLayout_splash"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_36BDFF">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginBottom="@dimen/y32"
                 android:layout_marginTop="@dimen/y200"
                 android:src="@drawable/logo_splash_screen" />
 
