--- a/app/src/main/res/layout/fragment_welcome_guide_view.xml
+++ b/app/src/main/res/layout/fragment_welcome_guide_view.xml
@@ -1,64 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?><!--<merge xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:card="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:animateLayoutChanges="true"--><!--android:background="@drawable/bg_welcome_page"--><!--android:clickable="true">-->
-<com.cylan.jiafeigou.widget.GreatDragView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/v_great_drag"
+<com.cylan.jiafeigou.misc.HackyViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/v_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@drawable/bg_welcome_page"
-    android:clickable="true">
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/x5"
-        android:layout_marginTop="-8dp"
-        card:cardElevation="@dimen/x10">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/x13"
-            android:paddingStart="@dimen/x13"
-            android:paddingTop="@dimen/y37"
-            android:src="@drawable/pic_welcome_page_3" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/x3"
-        android:layout_marginTop="-5dp"
-        card:cardElevation="@dimen/x10">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/x13"
-            android:paddingStart="@dimen/x13"
-            android:paddingTop="@dimen/y37"
-            android:src="@drawable/pic_welcome_page_2" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        card:cardElevation="@dimen/x10">
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/x13"
-            android:paddingStart="@dimen/x13"
-            android:paddingTop="@dimen/y37"
-            android:src="@drawable/pic_welcome_page_1" />
-
-    </android.support.v7.widget.CardView>
-</com.cylan.jiafeigou.widget.GreatDragView>
+    android:clickable="true" />
 
     <!--<com.cylan.jiafeigou.widget.GuideIndicatorLayout--><!--android:background="#eee000"--><!--android:msgId="@+msgId/v_guide_indicator"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_gravity="bottom|center_horizontal"--><!--android:layout_marginBottom="@dimen/y50" />--><!--</merge>-->
